# HnsX

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MONOREPO.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  go.work  go.work.sum  hnsx.db  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/hnsx-adapter/: Cargo.toml
crates/hnsx-adapter/src/: anthropic.rs  anthropic_adapter.rs  claude_code.rs  codex.rs  custom.rs  custom_adapter.rs  genai.rs  genai_adapter.rs  http_common.rs  lib.rs  ollama.rs  ollama_adapter.rs  openai.rs  openai_adapter.rs  tool_chat.rs  tools.rs
crates/hnsx-adapter/tests/: codex_integration.rs  customer_service_e2e.rs  genai_integration.rs  http_adapters_integration.rs  ollama_integration.rs  tools_integration.rs
crates/hnsx-cli/: Cargo.toml
crates/hnsx-cli/src/: main.rs  runtime.rs
crates/hnsx-cli/src/commands/: build.rs  control_plane.rs  deploy.rs  dev.rs  logs.rs  metrics.rs  mod.rs  register.rs  run.rs  test.rs  traces.rs  unregister.rs  validate.rs
crates/hnsx-cli/src/deploy/: docker.rs
crates/hnsx-cli/tests/: cli_smoke.rs
crates/hnsx-control-plane/: Cargo.toml  build.rs
crates/hnsx-control-plane/src/: discovery.rs  http_api.rs  lib.rs  metrics.rs  proto.rs  registry.rs  scheduler.rs  server.rs  store.rs  telemetry.rs
crates/hnsx-control-plane/tests/: control_plane_integration.rs  http_api_integration.rs
crates/hnsx-core/: Cargo.toml
crates/hnsx-core/src/: agent.rs  agent_factory.rs  bus.rs  domain.rs  hnsx_agent.rs  lib.rs  loader.rs  memory.rs  noop.rs  package.rs  pii.rs  sandbox.rs  telemetry.rs  tool.rs  workflow.rs
crates/hnsx-core/tests/: loader_integration.rs  memory_workflow_test.rs  telemetry_integration.rs  workflow_integration.rs
crates/hnsx-sandbox/: Cargo.toml
crates/hnsx-sandbox/src/: factory.rs  lib.rs
crates/hnsx-sandbox/src/backend/: linux.rs  mod.rs  none.rs  process.rs
crates/hnsx-tool/: Cargo.toml
crates/hnsx-tool/src/: http.rs  python.rs  shell.rs  sql.rs
hnsx-worker/: README.md  pyproject.toml
hnsx-worker/hnsx_worker/: __init__.py  __main__.py  config.py  logging.py  session_executor.py  session_runtime.py  version.py  worker_service.py
hnsx-worker/hnsx_worker/adapters/: __init__.py  anthropic.py  base.py  claude_code.py  cli_base.py  codex.py  echo.py  noop.py  ollama.py  openai.py
hnsx-worker/hnsx_worker/agents/: __init__.py  base.py  multi_agent.py  plan_solve_agent.py  react_agent.py  reflection.py
hnsx-worker/hnsx_worker/approval/: __init__.py  bus.py  protocol.py  server_bus.py
hnsx-worker/hnsx_worker/eval/: __init__.py  improvement_loop.py  prompt_evolution.py  regression_radar.py  runner.py  scorers.py
hnsx-worker/hnsx_worker/harness/: __init__.py  loader.py  runner.py  transition.py
hnsx-worker/hnsx_worker/memory/: __init__.py  backend.py  base.py  in_memory.py  sqlite.py
hnsx-worker/hnsx_worker/policy/: __init__.py  engine.py  presets.py
hnsx-worker/hnsx_worker/proto_client/: __init__.py  client.py  messages.py
hnsx-worker/hnsx_worker/sandbox/: __init__.py  backend.py
hnsx-worker/hnsx_worker/skills/: __init__.py  registry.py  resolver.py
hnsx-worker/hnsx_worker/store/: __init__.py  backend.py
hnsx-worker/hnsx_worker/tools/: __init__.py  base.py  delegate.py  factory.py  http.py  human_approval.py  mcp_client.py  memory.py  python.py  python_runner.py  registry.py  self_check.py  sql.py
hnsx-worker/tests/: mock_server.py  test_cli_adapters.py  test_e2e_go_server.py  test_eval.py  test_executor_streaming.py  test_executor_tool_wiring.py  test_harness.py  test_http_tool.py  test_imports.py  test_mcp_client.py  test_memory.py  test_openai_streaming.py  test_policy.py  test_proto_client.py  test_python_tool.py  test_real_adapters.py  test_sandbox.py  test_secrets.py  test_session_runtime.py  test_skill_integration.py  test_sql_tool.py  test_store.py  test_tool_registry.py  test_worker_resilience.py  test_worker_service.py  test_workflow_mode.py
hnsx-worker/tests/agents/: test_multi_agent.py  test_plan_solve_agent.py  test_react_agent.py  test_reflection.py
hnsx-worker/tests/approval/: test_human_in_the_loop.py  test_policy_approval.py
hnsx-worker/tests/eval/: test_improvement_loop.py  test_prompt_evolution.py  test_regression_radar.py  test_session_w13_pipeline.py
hnsx-worker/tests/skills/: test_registry.py  test_resolver.py
hnsx-worker/tests/tools/: test_self_check.py
legacy/: Cargo.toml
legacy/crates/crates/hnsx-adapter/src/: codex.rs  custom.rs  openai.rs  openai_adapter.rs
legacy/crates/crates/hnsx-adapter/tests/: genai_integration.rs
legacy/crates/crates/hnsx-core/src/: domain.rs  error.rs  loader.rs  tool.rs
legacy/crates/crates/hnsx-core/tests/: telemetry_integration.rs
legacy/crates/crates/hnsx-tool/src/: sql.rs
legacy/crates/hnsx-adapter/: Cargo.toml
legacy/crates/hnsx-adapter/src/: custom_adapter.rs  genai_adapter.rs  lib.rs  ollama.rs
legacy/crates/hnsx-adapter/tests/: http_adapters_integration.rs
legacy/crates/hnsx-cli/: Cargo.toml
legacy/crates/hnsx-cli/src/: main.rs  runtime.rs
legacy/crates/hnsx-cli/src/commands/: config.rs  control_plane.rs  (+5 more)
legacy/crates/hnsx-cli/tests/: cli_smoke.rs
legacy/crates/hnsx-control-plane/: Cargo.toml
legacy/crates/hnsx-control-plane/src/: metrics.rs  proto.rs  registry.rs
legacy/crates/hnsx-core/src/: adapter.rs  chunk.rs  hnsx_agent.rs  lib.rs  memory.rs  noop.rs  package.rs  pii.rs  reporter.rs  sandbox.rs  telemetry.rs  workflow.rs
legacy/crates/hnsx-core/tests/: loader_integration.rs  workflow_integration.rs
legacy/crates/hnsx-proto/: Cargo.toml  build.rs
legacy/crates/hnsx-sandbox/src/: factory.rs  lib.rs
legacy/crates/hnsx-tool/src/: http.rs  lib.rs
legacy/tests/tests/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/hnsx/: __init__.py  base.py  builder.py  client.py  errors.py  models.py  resources.py  sse.py
sdk/python/hnsx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: test_client.py
(+1157 files in other folders)
