[workspace]
resolver = "3"
members = [
    "crates/hnsx-core",
    "crates/hnsx-sandbox",
    "crates/hnsx-adapter",
    "crates/hnsx-tool",
    "crates/hnsx-cli",
    "crates/hnsx-control-plane",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
warnings = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Internal
hnsx-core = { path = "crates/hnsx-core" }
hnsx-sandbox = { path = "crates/hnsx-sandbox" }
hnsx-adapter = { path = "crates/hnsx-adapter" }
hnsx-tool = { path = "crates/hnsx-tool" }
hnsx-cli = { path = "crates/hnsx-cli" }
hnsx-control-plane = { path = "crates/hnsx-control-plane" }

# Async
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Graph
petgraph = "0.6"

# Multi-provider LLM (OpenAI, Anthropic, Ollama, custom OpenAI-compatible)
genai = "0.7.0-beta.9"

# Session / invocation ids
uuid = { version = "1", features = ["v4"] }

# Test-only: mock HTTP for hermetic tests of LLM adapters
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
