[workspace]
resolver = "3"
members = [
    "crates/hnsx-proto",
    "crates/hnsx-core",
    "crates/hnsx-sandbox",
    "crates/hnsx-adapter",
    "crates/hnsx-tool",
    "crates/hnsx-cli",
    "crates/hnsx-control-plane",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
warnings = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Internal
hnsx-proto = { path = "crates/hnsx-proto" }
hnsx-core = { path = "crates/hnsx-core" }
hnsx-sandbox = { path = "crates/hnsx-sandbox" }
hnsx-adapter = { path = "crates/hnsx-adapter" }
hnsx-tool = { path = "crates/hnsx-tool" }
hnsx-cli = { path = "crates/hnsx-cli" }
hnsx-control-plane = { path = "crates/hnsx-control-plane" }

# Async
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Graph
petgraph = "0.6"

# Multi-provider LLM (OpenAI, Anthropic, Ollama, custom OpenAI-compatible)
genai = "0.7.0-beta.9"

# Session / invocation ids
uuid = { version = "1", features = ["v4"] }

# Test-only: mock HTTP for hermetic tests of LLM adapters
wiremock = "0.6"

# HTTP client for the HTTP tool
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# SQLite for the SQL tool and SQLite memory backend
rusqlite = { version = "0.32", features = ["bundled"] }

# Persistent memory backends (Phase 4)
redis = { version = "0.29", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

# gRPC / control plane
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
tokio-stream = "0.1"
dashmap = "6"
chrono = "0.4"

# HTTP / Web UI gateway
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.30"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Pattern matching for PII detection
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
