[package]
name = "hnsx-adapter"
description = "Adapter layer wrapping external AI agents (OpenAI, Anthropic, Claude Code CLI, Codex, Ollama, custom)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
async-trait = { workspace = true }
