[package]
name = "hnsx-adapter"
description = "Adapter layer wrapping external AI agents (OpenAI, Anthropic, Claude Code CLI, Codex, Ollama, custom)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
hnsx-sandbox = { path = "../hnsx-sandbox" }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
genai = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
hnsx-tool = { path = "../hnsx-tool" }

[dev-dependencies]
wiremock = { workspace = true }
