[package]
name = "hnsx-cli"
description = "HnsX command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "hnsx"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
