[package]
name = "hnsx-control-plane"
description = "HnsX control-plane service (registry, scheduler, discovery, telemetry aggregation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
