[package]
name = "hnsx-core"
description = "HnsX core runtime: Domain, Agent, Adapter, Sandbox traits and shared types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
