[package]
name = "hnsx-core"
description = "HnsX core runtime: Domain, Agent, Adapter, Sandbox traits and shared types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-proto = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
tokio-postgres = { workspace = true }
rusqlite = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["time", "macros", "rt"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tempfile = "3"
