[package]
name = "hnsx-sandbox"
description = "HnsX sandbox layer (Linux-only implementations land in Phase 1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
