[package]
name = "hnsx-tool"
description = "Built-in tools exposed to agents (HTTP, Python, SQL, Shell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
