[package]
name = "hnsx-tool"
description = "Built-in tools exposed to agents (HTTP, Python, SQL, Shell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hnsx-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["resource"] }

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }
