[package]
name = "hnsx-proto"
description = "Generated gRPC types and service stubs for HnsX"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
